--- a/LIVE/request.html
+++ b/LIVE/request.html
@@ -23,7 +23,7 @@
         </div>
         <div class=MID_SPACER>
         </div>
-        <div class=SEARCH>
+        <div class=SEARCH2>
             <form>
                 <input type="search" style="width: 250px;" name="search_box">
                 <input type="button" value="Go">
