Adding Search Part 1

--- a/LIVE/request.html
+++ b/LIVE/request.html
@@ -24,9 +24,9 @@
         <div class=MID_SPACER>
         </div>
         <div class=SEARCH2>
-            <form>
-                <input type="search" style="width: 250px;" name="search_box">
-                <input type="button" value="Go">
+            <form action="response.html">
+                <input type="search" style="width: 250px;" name="search">
+                <input type="button" value="Go" formaction="response.html">
             </form>
         </div>
     </div>
