--- a/LIVE/reponse.html
+++ b/LIVE/reponse.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Cloud Code</title>
     <meta name="description" content="A website searching code.">
-    <link rel="stylesheet" href="static/request.css">
+    <link rel="stylesheet" href="request.css">
 </head>
 
 <body>
@@ -24,9 +24,9 @@
             </div>
             <div class=SEARCH>
                 <div class=VER_SERACH>
-                    <form>
+                    <form action="response.html">
                         <input type="search" style="width: 250px;" name="search_box">
-                        <input type="button" value="Go">
+                        <input type="submit" value="Go">
                     </form>
                 </div>
             </div>
