--- a/LIVE/reponse.html
+++ b/LIVE/reponse.html
@@ -25,7 +25,7 @@
             <div class=SEARCH>
                 <div class=VER_SERACH>
                     <form action="response.html">
-                        <input type="search" style="width: 250px;" name="search_box">
+                        <input type="search" style="width: 250px;" name="search">
                         <input type="submit" value="Go">
                     </form>
                 </div>
